Fixed extra space issue

--- a/src/components/About.scss
+++ b/src/components/About.scss
@@ -221,7 +221,7 @@
   .stage-cube-cont {
     position: relative;
     width: 100%;
-    height: 500px;
+    height: 200px;
     padding-top: 0px;
     left: 0;
     top:145%;
