--- a/src/components/Layout.scss
+++ b/src/components/Layout.scss
@@ -501,7 +501,7 @@
        
 
         img{
-            width: 150px;
+            width: 130px;
            
         }
     }
